fix for data relocations

--- a/test/st/dynamic_linker/tests/module_with_data_relocation/CMakeLists.txt
+++ b/test/st/dynamic_linker/tests/module_with_data_relocation/CMakeLists.txt
@@ -1,13 +1,14 @@
 add_library(module_with_data_lib OBJECT)
 
-target_sources(module_with_data_lib 
-    PRIVATE 
-        ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp 
+target_sources(module_with_data_lib
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
 )
 
-target_link_libraries(module_with_data_lib 
-    PRIVATE 
+target_link_libraries(module_with_data_lib
+    PUBLIC
         module_flags
+        msos_utils
 )
 
 add_module(module_with_data module_with_data_lib)
