started working with data relocation

--- a/test/st/dynamic_linker/host/CMakeLists.txt
+++ b/test/st/dynamic_linker/host/CMakeLists.txt
@@ -39,3 +39,9 @@ add_custom_command(
 
 set (HOST_BINARY_FILE "${CMAKE_CURRENT_BINARY_DIR}/host.bin" CACHE INTERNAL "")
 
+target_compile_options(host 
+    PUBLIC 
+    $<$<CONFIG:DEBUG>:-Og -g>
+    $<$<CONFIG:RELEASE>:-Os>
+) 
+
