--- a/test/st/dynamic_linker/host/CMakeLists.txt
+++ b/test/st/dynamic_linker/host/CMakeLists.txt
@@ -1,7 +1,23 @@
+# This file is part of MSOS project. This is simple OS for embedded development devices.
+# Copyright (C) 2019 Mateusz Stadnik
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
 add_executable(host)
 
 target_sources(host
-    PUBLIC 
+    PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
 )
 
@@ -14,12 +30,12 @@ target_link_libraries(host
 include (GenerateBinary)
 generate_binary(host ${vendor})
 
-target_include_directories(host 
-    PUBLIC 
+target_include_directories(host
+    PUBLIC
         ${PROJECT_SOURCE_DIR}/include
 )
 
-set_target_properties(host 
+set_target_properties(host
     PROPERTIES
         SUFFIX ".elf"
 )
@@ -31,7 +47,7 @@ if (NOT qemu_img)
 endif ()
 
 add_custom_command(
-    TARGET host 
+    TARGET host
     COMMAND ${qemu_img} resize ${CMAKE_CURRENT_BINARY_DIR}/host.bin 32K
     POST_BUILD
     VERBATIM
@@ -39,9 +55,9 @@ add_custom_command(
 
 set (HOST_BINARY_FILE "${CMAKE_CURRENT_BINARY_DIR}/host.bin" CACHE INTERNAL "")
 
-target_compile_options(host 
-    PUBLIC 
+target_compile_options(host
+    PUBLIC
     $<$<CONFIG:DEBUG>:-Og -g>
     $<$<CONFIG:RELEASE>:-Os>
-) 
+)
 
