--- a/test/st/dynamic_linker/tests/module_with_data_relocation/CMakeLists.txt
+++ b/test/st/dynamic_linker/tests/module_with_data_relocation/CMakeLists.txt
@@ -1,3 +1,19 @@
+# This file is part of MSOS project. This is simple OS for embedded development devices.
+# Copyright (C) 2019 Mateusz Stadnik
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
 add_library(module_with_data_lib OBJECT)
 
 target_sources(module_with_data_lib
@@ -6,15 +22,16 @@ target_sources(module_with_data_lib
 )
 
 target_compile_options(module_with_data_lib
-    PUBLIC 
+    PUBLIC
     $<$<CONFIG:DEBUG>:-Og -g>
     $<$<CONFIG:RELEASE>:-Os>
-) 
+)
 
 target_link_libraries(module_with_data_lib
     PUBLIC
         module_flags
         msos_utils
+        eul
 )
 
 add_module(module_with_data module_with_data_lib)
