--- a/test/st/dynamic_linker/host/CMakeLists.txt
+++ b/test/st/dynamic_linker/host/CMakeLists.txt
@@ -23,8 +23,7 @@ target_sources(host
 
 target_link_libraries(host
     PUBLIC
-        hal
-        msos_dynamic_linker
+        msos
 )
 
 include (GenerateBinary)
