--- a/test/st/dynamic_linker/tests/CMakeLists.txt
+++ b/test/st/dynamic_linker/tests/CMakeLists.txt
@@ -10,10 +10,11 @@
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 add_subdirectory(simple_single_module)
 add_subdirectory(module_with_data_relocation)
 add_subdirectory(test_bss_section)
+add_subdirectory(interface_and_classes)
