--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://matgla.github.io/msos"
+baseURL = "https://matgla.github.io/msos/"
 languageCode = "en-us"
 
 title = "MSOS project webpage"
