--- a/.github/workflows/publish_website.yml
+++ b/.github/workflows/publish_website.yml
@@ -36,7 +36,7 @@ jobs:
         FOLDER: site/public
     - name: Install Sphinx 
       run: |
-        pip install sphinx
+        sudo apt-get install python3-sphinx
     - name: Generate documentation 
       run: | 
         make docs
