--- a/.github/workflows/publish_devdocs.yml
+++ b/.github/workflows/publish_devdocs.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v1
     - name: Generate documentation 
       run: | 
         pip3 install --user sphinx
