--- a/src/kernel/process/CMakeLists.txt
+++ b/src/kernel/process/CMakeLists.txt
@@ -14,51 +14,33 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-add_library(msos STATIC)
+add_library(msos_kernel_process)
 
-add_subdirectory(dynamic_linker)
-add_subdirectory(kernel)
-add_subdirectory(syscalls)
-add_subdirectory(utils)
-add_subdirectory(posix)
+set (library_includes ${PROJECT_SOURCE_DIR}/include/msos/kernel/process)
 
-set (library_includes ${PROJECT_SOURCE_DIR}/include/msos)
-
-target_sources(msos
+target_sources(msos_kernel_process 
     PUBLIC
-        ${library_includes}/usart_printer.hpp
+        ${library_includes}/context_switch.hpp
+        ${library_includes}/fwd.hpp
+        ${library_includes}/process.hpp 
+        ${library_includes}/process_manager.hpp
+        ${library_includes}/registers.hpp 
+        ${library_includes}/scheduler.hpp 
+
+   PRIVATE 
+        ${CMAKE_CURRENT_SOURCE_DIR}/context_switch.s 
+        ${CMAKE_CURRENT_SOURCE_DIR}/process.cpp 
+        ${CMAKE_CURRENT_SOURCE_DIR}/process_manager.cpp 
+        ${CMAKE_CURRENT_SOURCE_DIR}/scheduler.cpp 
 )
 
-target_link_libraries(msos
-    PUBLIC
-        msos_dynamic_linker
-        msos_syscalls
-        hal
-        msos_posix
+target_link_libraries(msos_kernel_process 
+    PUBLIC 
+        hal 
 )
-
-target_include_directories(msos
-    PUBLIC
+        
+target_include_directories(msos_kernel_process 
+    PUBLIC 
         ${PROJECT_SOURCE_DIR}/include
 )
-
-add_executable(msos_test)
-
-target_sources(msos_test 
-    PUBLIC 
-        ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp 
-)
-
-target_link_libraries(msos_test
-    PUBLIC 
-        msos 
-)
-
-set_target_properties(msos_test 
-    PROPERTIES 
-        SUFFIX ".elf"
-)
-
-include (GenerateBinary)
-generate_binary(msos_test ${vendor})
 
