added ram block device

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,8 @@ add_subdirectory(kernel)
 add_subdirectory(syscalls)
 add_subdirectory(utils)
 add_subdirectory(posix)
+#add_subdirectory(fs)
+add_subdirectory(drivers)
 
 set (library_includes ${PROJECT_SOURCE_DIR}/include/msos)
 
@@ -31,14 +33,11 @@ target_sources(msos
 
 target_link_libraries(msos
     PUBLIC
-    #jj        -Wl,--whole-archive 
         msos_kernel_synchronization
-        #   -Wl,--no-whole-archive
         msos_syscalls
         msos_dynamic_linker
-        -Wl,--whole-archive
+        msos_drivers_storage
         hal
-        -Wl,--no-whole-archive
         msos_posix
 )
 
