added test for mutex

--- a/test/st/CMakeLists.txt
+++ b/test/st/CMakeLists.txt
@@ -10,7 +10,7 @@
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
@@ -25,7 +25,7 @@ set(virtualenv_exec ${virtualenv_exec} -p python3)
 find_file (ST_TESTS_VIRTUALENV_FILE test_st_venv.stamp ${CMAKE_CURRENT_BINARY_DIR}/)
 if (${ST_TESTS_VIRTUALENV_FILE} STREQUAL ST_TESTS_VIRTUALENV_FILE-NOTFOUND)
     execute_process(
-        COMMAND ${virtualenv_exec} ${CMAKE_CURRENT_BINARY_DIR}/system_tests_env 
+        COMMAND ${virtualenv_exec} ${CMAKE_CURRENT_BINARY_DIR}/system_tests_env
     )
     file (TOUCH ${CMAKE_CURRENT_BINARY_DIR}/test_st_venv.stamp)
     find_file (ST_TESTS_VIRTUALENV_FILE test_st_venv.stamp ${CMAKE_CURRENT_BINARY_DIR}/)
@@ -48,16 +48,17 @@ add_custom_target(generate_config_file)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 add_subdirectory(dynamic_linker)
+add_subdirectory(synchronization)
 
 add_custom_command(
-    TARGET generate_config_file 
+    TARGET generate_config_file
     DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/system_tests_env.stamp
     COMMAND ${CMAKE_CURRENT_BINARY_DIR}/system_tests_env/bin/python3 ${CMAKE_CURRENT_SOURCE_DIR}/generate_config_file.py "${BINARIES_FOR_ST}"
     VERBATIM)
 
 add_custom_target(run_st
-    COMMAND 
-    PYTHONPATH=${PYTHONPATH}:${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/system_tests_env/bin/py.test ${PROJECT_SOURCE_DIR}/test/st -s 
+    COMMAND
+    PYTHONPATH=${PYTHONPATH}:${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/system_tests_env/bin/py.test ${PROJECT_SOURCE_DIR}/test/st -s
     DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/system_tests_env.stamp ${run_st_deps} generate_config_file
     VERBATIM
 )
