started working on syscalls

--- a/test/st/CMakeLists.txt
+++ b/test/st/CMakeLists.txt
@@ -49,6 +49,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 add_subdirectory(drivers)
 add_subdirectory(dynamic_linker)
+add_subdirectory(kernel)
 add_subdirectory(synchronization)
 
 add_custom_command(
