--- a/src/fs/CMakeLists.txt
+++ b/src/fs/CMakeLists.txt
@@ -20,9 +20,13 @@ set(library_includes ${PROJECT_SOURCE_DIR}/include/msos/fs)
 
 target_sources(msos_fs
     PUBLIC
-        ${library_includes}/block_device.hpp
+        ${library_includes}/i_filesystem.hpp
+        ${library_includes}/mount_point.hpp
+        ${library_includes}/mount_points.hpp
+        ${library_includes}/ramfs.hpp
     PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/block_device.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/mount_points.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/ramfs.cpp
 )
 
 target_include_directories(msos_fs
@@ -41,6 +45,7 @@ target_link_libraries(msos_fs
     PUBLIC
         gsl
         eul
+        msos_drivers_storage
 )
 
 
