--- a/test/st/kernel/CMakeLists.txt
+++ b/test/st/kernel/CMakeLists.txt
@@ -15,4 +15,5 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 add_subdirectory(process_creation_deletion)
+add_subdirectory(spawn_process_from_filesystem)
 
