--- a/src/posix/CMakeLists.txt
+++ b/src/posix/CMakeLists.txt
@@ -21,7 +21,6 @@ set (library_includes ${PROJECT_SOURCE_DIR}/include/msos/posix)
 target_sources(msos_posix
     PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/fork.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/fork.s
 )
 
 target_include_directories(msos_posix
@@ -33,5 +32,6 @@ target_include_directories(msos_posix
 target_link_libraries(msos_posix
     PRIVATE
         msos_kernel_process
+        msos_arch
 )
 
