fixes for random crashes

--- a/src/arch/armv7-m/CMakeLists.txt
+++ b/src/arch/armv7-m/CMakeLists.txt
@@ -24,6 +24,7 @@ target_sources(msos_arch_armv7m
 
         ${CMAKE_CURRENT_SOURCE_DIR}/context_switch.s
         ${CMAKE_CURRENT_SOURCE_DIR}/semaphore.s
+        ${CMAKE_CURRENT_SOURCE_DIR}/semaphore.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/context_switch.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/syscalls.s
         ${CMAKE_CURRENT_SOURCE_DIR}/pendsv_handler.cpp
