--- a/src/syscalls/CMakeLists.txt
+++ b/src/syscalls/CMakeLists.txt
@@ -34,5 +34,6 @@ target_link_libraries(msos_syscalls
     PUBLIC
         hal
         msos_kernel_process
+        msos_kernel_synchronization
 )
 
