--- a/src/arch/CMakeLists.txt
+++ b/src/arch/CMakeLists.txt
@@ -14,7 +14,9 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-add_subdirectory(armv7-m)
+if (${arch} STREQUAL "ARM")
+    add_subdirectory(armv7-m)
+endif()
 
 add_library(msos_arch INTERFACE)
 
