--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,28 +25,27 @@ include(${PROJECT_SOURCE_DIR}/cmake/GitModules.cmake)
 set (user_boards_path ${PROJECT_SOURCE_DIR}/boards CACHE STRING "Path to boards provided from user" FORCE)
 add_definitions("-DGSL_TERMINATE_ON_CONTRACT_VIOLATION=1 -DGSL_MSVC_USE_STL_NOEXCEPTION_WORKAROUND=1")
 
-if (BOARD)
-    fetch_module_via_branch(lib/hal ${PROJECT_SOURCE_DIR}/lib/hal ${CMAKE_CURRENT_SOURCE_DIR} "master")
-    enable_language(ASM C CXX)
-    fetch_module_via_branch(lib/msgui ${PROJECT_SOURCE_DIR}/lib/msgui ${CMAKE_CURRENT_SOURCE_DIR} "master")
-    set (DISABLE_ROMFS_TESTS "1")
-    set (romfs_cxx_compilation_flags ${hal_cxx_compilation_flags})
-    fetch_module_via_branch(lib/romfs ${PROJECT_SOURCE_DIR}/lib/romfs ${CMAKE_CURRENT_SOURCE_DIR} "master")
-    fetch_module_via_branch(lib/gsl/gsl ${PROJECT_SOURCE_DIR}/lib/gsl/gsl ${CMAKE_CURRENT_SOURCE_DIR} "v2.0.0")
-endif ()
+if (NOT BOARD OR BOARD STREQUAL "Unknown" OR BOARD STREQUAL "unittest")
+    set(BOARD "unittest" CACHE STRING "Target board" FORCE)
+    set(BUILD_MSOS_UT ON CACHE BOOL "Build UT" FORCE)
+else ()
+    set(BUILD_MSOS_UT OFF CACHE BOOL "Build UT" FORCE)
+endif()
+
+fetch_module_via_branch(lib/hal ${PROJECT_SOURCE_DIR}/lib/hal ${CMAKE_CURRENT_SOURCE_DIR} "master")
+enable_language(ASM C CXX)
+fetch_module_via_branch(lib/msgui ${PROJECT_SOURCE_DIR}/lib/msgui ${CMAKE_CURRENT_SOURCE_DIR} "master")
+set (DISABLE_ROMFS_TESTS "1")
+set (romfs_cxx_compilation_flags ${hal_cxx_compilation_flags})
+fetch_module_via_branch(lib/romfs ${PROJECT_SOURCE_DIR}/lib/romfs ${CMAKE_CURRENT_SOURCE_DIR} "master")
+fetch_module_via_branch(lib/gsl/gsl ${PROJECT_SOURCE_DIR}/lib/gsl/gsl ${CMAKE_CURRENT_SOURCE_DIR} "v2.0.0")
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 set(CMAKE_EXECUTABLE_SUFFIX "${CMAKE_EXECUTABLE_SUFFIX}")
 
-if (NOT BOARD)
-    enable_language(ASM C CXX)
-endif ()
-
-if (BOARD)
-    add_subdirectory(include/msos/drivers)
-    add_subdirectory(src)
-    add_subdirectory(modules)
-endif ()
+add_subdirectory(include/msos/drivers)
+add_subdirectory(src)
+add_subdirectory(modules)
 
 if (NOT DISABLE_TESTS OR DISABLE_ST_TESTS)
     add_subdirectory(test)
