dynamic linker refactored partially

--- a/src/dynamic_linker/CMakeLists.txt
+++ b/src/dynamic_linker/CMakeLists.txt
@@ -21,6 +21,8 @@ set (library_includes ${PROJECT_SOURCE_DIR}/include/msos/dynamic_linker)
 target_sources(msos_dynamic_linker
     PUBLIC
         ${library_includes}/dynamic_linker.hpp
+        ${library_includes}/dynamic_linker_errors.hpp
+        ${library_includes}/fwd.hpp
         ${library_includes}/environment.hpp
         ${library_includes}/loaded_module.hpp
         ${library_includes}/module.hpp
@@ -30,8 +32,8 @@ target_sources(msos_dynamic_linker
         ${library_includes}/symbol.hpp
 
     PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/call_external.s
         ${CMAKE_CURRENT_SOURCE_DIR}/dynamic_linker.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/dynamic_linker_errors.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/loaded_module.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/module.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/module_data.cpp
