--- a/test/st/dynamic_linker/tests/CMakeLists.txt
+++ b/test/st/dynamic_linker/tests/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(simple_single_module)
 add_subdirectory(module_with_data_relocation)
 add_subdirectory(test_bss_section)
 add_subdirectory(interface_and_classes)
+add_subdirectory(pass_arg_and_get_return)
