--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,5 +48,9 @@ add_subdirectory(src)
 add_subdirectory(modules)
 
 if (NOT DISABLE_TESTS OR DISABLE_ST_TESTS)
+    include (CTest)
+    enable_testing()
     add_subdirectory(test)
 endif ()
+
+set (NO_DEPS_UPDATE ON CACHE BOOL "Dependencies downloaded, and shouln't be changed when cmake-regenerate")
